--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>VISMITHA B</h1>
 			<hr>
-			YOUR TITLE
+			Web Developer
 			<hr>
 		</header>
 		<main>
@@ -20,31 +20,31 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">your-email@example.com</a>
+                        <a href="mailto:your-email@example.com">bvismitha@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">gh-username</a>
+                        <a href="github.com/gh-username">gh-vismitha07</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                        <a href="linkedin.com/linkedin-username">linkedin-vismitha07</a>
                     </p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>HTML, CSS, GitHub, VS Code...</p>
+                    <p>HTML, CSS, java,C#,Python...</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3>MCA</h3>
                     <p>
-                        Your university or school
+                        Presidency university
                     </p>
                     <p>
-                        2018-2022
+                        2023-2025
                     </p>
 				</section>            
 			</article>
@@ -52,22 +52,22 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of company you want to work for.</p>
+					<p>I'm web developer and i want join accenture</p>
 				</section>
 				<section>
-					<h2>WORK EXPERIENCE</h2>
+					<h2>A Year of Experience</h2>
 					<!-- your work experience -->
-                    <h3>JOB TITLE</h3>
+                    <h3>Web Developer</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            Wipro | 2026 - 2027
                     </p>
                     <p>
-                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                           I enhanced my skill
                     </p>
                     <ul>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
+                            <li>learn a  skill</li>
+                            <li>Team Project</li>
+                            
                     </ul>
 				</section>
 			</article>
